--- a/packages/sst/package.json
+++ b/packages/sst/package.json
@@ -59,6 +59,7 @@
     "@babel/core": "^7.0.0-0",
     "@babel/generator": "^7.20.5",
     "@babel/plugin-syntax-typescript": "^7.21.4",
+    "@decs/typeschema": "^0.1.3",
     "@trpc/server": "9.16.0",
     "adm-zip": "^0.5.10",
     "aws-cdk-lib": "2.84.0",
@@ -98,8 +99,7 @@
     "undici": "^5.12.0",
     "uuid": "^9.0.0",
     "ws": "^8.11.0",
-    "yargs": "^17.6.2",
-    "zod": "^3.21.4"
+    "yargs": "^17.6.2"
   },
   "devDependencies": {
     "@aws-sdk/client-api-gateway": "^3.208.0",
@@ -126,7 +126,8 @@
     "archiver": "^5.3.1",
     "tsx": "^3.12.1",
     "typescript": "^4.9.5",
-    "vitest": "^0.28.3"
+    "vitest": "^0.28.3",
+    "zod": "^3.21.4"
   },
   "peerDependencies": {
     "@sls-next/lambda-at-edge": "^3.7.0"
